--- a/src/index.scss
+++ b/src/index.scss
@@ -150,6 +150,9 @@ body{
     background-color: #dcdcdc;
     pointer-events: none;
 }
+.ant-checkbox-disabled + span{
+
+}
 .div_filter .ant-input-affix-wrapper{
     border:1px solid var(--border_color) !important;
 }
@@ -367,7 +370,14 @@ body{
 }
 .ant-popover-inner-content{
     background-color: var(--option_select) !important;
-}
+    .ant-checkbox-disabled + span{
+        color: #757575;
+    }
+    .ant-checkbox-disabled .ant-checkbox-inner {
+        border: 1px solid var(--border_color) !important;
+    }
+
+    }
 .ant-breadcrumb-separator{
     color: var(--separator-color) !important;
 }
